Implemented  Tools API
API + docs
